[+] 添加订单管理的表格

--- a/login.html
+++ b/login.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:background-size="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="layui/css/layui.css">
     <script src="layui/layui.all.js"></script>
     <title>Title</title>
 </head>
-<body>
+
+<!--<body background="./img/bg.jpg" background-size:100% 100% >-->
 <form class="layui-form" style="margin-top: 20% ;margin-left: 30%"  action="">
     <div class="layui-main">
     <div class="layui-form-item">
